# 01-groundtruth

./: IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/alembic/versions/: 002_api_keys.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  documents.py  health.py  queries.py
backend/app/models/: __init__.py  api_key.py  chunk.py  document.py
backend/app/parsers/: docx.py  html.py  markdown.py  pdf.py
backend/app/services/: chunking.py  citation.py  embedding.py  generation.py  retrieval.py
backend/tests/: test_chunking.py  test_citation.py  test_ingestion.py  test_retrieval.py
frontend/: package.json
frontend/src/app/: layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/: ChatInterface.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
